components/radarr-synology/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radar
  namespace: default
spec:
  selector: {}
  ports:
    - name: https
      protocol: TCP
      port: 8310
      targetPort: 8310
      nodePort: 0
---
apiVersion: v1
kind: Endpoints
metadata:
  name: radar
  namespace: default
subsets:
- addresses:
  - ip: "192.168.1.101"
  ports:
  - name: https
    port: 8310
    protocol: TCP
