components/radarr-synology/ingress.yaml
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      # nginx.ingress.kubernetes.io/ssl-passthrough: "true"
      nginx.ingress.kubernetes.io/ssl-redirect: "true"
      kubernetes.io/ingress.class: nginx
      # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
      # nginx.ingress.kubernetes.io/rewrite-target: /$1
      # nginx.ingress.kubernetes.io/configuration-snippet: |
      #   proxy_set_header Host $host;
    name: radar
    namespace: default
  spec:
    rules:
    - host: radar.raelix.com
      http:
        paths:
        - backend:
            service:
              name: radar
              port:
                name: https
          path: /
          pathType: ImplementationSpecific
    tls:
    - secretName: radar.raelix.com-tls
      hosts:
      - radar.raelix.com
